[FIX] web_gantt: fix gantt connector accessibility issues
This commit fixes two accessibility issues related to the gantt
view connectors. Prior to this commit, the connectors were using the raw
value when hovering the pill. This is mostly fine is light mode, but for
some specific color, this was sometimes not enough to ensure a good
visual separation between the connectors and the pill. To handle this
issue, we add a pseudo element underneath the border, to make it stand
out and prevent all the potential contrast issues.

There was also a `z-index` issues with the connectors, the one at the
bottom being hidden by the pill below. To fix the issue, we handle the
`z-index` at the pill wrapper level to ensure it gets the right elevation.

task-3865935

closes odoo/enterprise#74859

--- a/web_gantt/static/src/gantt_view.scss
+++ b/web_gantt/static/src/gantt_view.scss
@@ -201,6 +201,10 @@
         min-height: var(--Gantt__Pill-height);
         @include o-gantt-zindex(pill);
 
+        &.highlight, &.o_connector_creator_lock {
+            @include o-gantt-zindex(pill-interact);
+        }
+
         // Group pills
         &.o_gantt_group_pill {
             pointer-events: none;
@@ -477,11 +481,23 @@
     .o_connector_creator {
         height: $o-connector-creator-size;
         width: $o-connector-creator-size;
+
+        &::before {
+            @include o-position-absolute(0, 0, 0, 0);
+            z-index: -1;
+            border: inherit;
+            border-width: $border-width * 3;
+            border-color: var(--Gantt__Day-background-color);
+            transform: translate(var(--Gantt__Connector-creator-x, $border-width * 2), var(--Gantt__Connector-creator-y, $border-width * -2));
+            content: "";
+        }
     }
 
     .o_connector_creator_bullet {
+        z-index: -1;
         height: $o-connector-creator-bullet-diameter;
         width: $o-connector-creator-bullet-diameter;
+        outline: $border-width solid var(--Gantt__Day-background-color);
     }
 
     .o_connector_creator_top {
@@ -493,6 +509,9 @@
     }
 
     .o_connector_creator_right {
+        --Gantt__Connector-creator-x: #{$border-width * -2};
+        --Gantt__Connector-creator-y: #{$border-width * 2};
+
         /*rtl:ignore*/
         right: $o-connector-creator-size;
 
